--- a/connectors/module/din5-270/din5-270.yaml
+++ b/connectors/module/din5-270/din5-270.yaml
@@ -14,4 +14,4 @@ contacts:
   5: common
   6: controller-area-network-low
   7: controller-area-network-high
-  8: thirty-volts-max
+  8: forty-volts-max
