--- a/connectors/module/dsub-de-2v2/dsub-de-2v2.yaml
+++ b/connectors/module/dsub-de-2v2/dsub-de-2v2.yaml
@@ -1,4 +1,4 @@
-name: DE-2W2 Connector
+name: DE-2V2 Connector
 summary: 12V 40A Max Connector
 notes:
   - Connector may accomodate either 20A or 40A on A1 & A2.
