--- a/connectors/module/card-edge-25/card-edge-25.yaml
+++ b/connectors/module/card-edge-25/card-edge-25.yaml
@@ -1,10 +1,10 @@
-name: Header 26 Pin
+name: Card Edge 26 Contact
 description: >
-  The companion header for the Retro Specification DB-25 connector.
+  The companion edge connector for the Retro Specification DB-25 connector.
 tips:
-  - Consider using this connector on an Arduino shield to conform the Arduino
-    to the Retro Specification. Source a 26-pin header to DB-25 connector cable
-    from an old PC.
+  - Source a 26-pin header to DB-25 connector cable from an old PC. Separately,
+     source a 26 Contact Edge IDC Ribbon connector & crimp it onto
+     the connector cable.
 capabilities:
   - DC Power
   - Analog HD Video
@@ -67,4 +67,3 @@ contacts:
     - av-bus-audio-right
     - av-bus-audio-channel-2
     - common
-  26: key
