--- a/connectors/module/din5-240/din5-240.yaml
+++ b/connectors/module/din5-240/din5-240.yaml
@@ -1,8 +1,21 @@
 name: DIN5 240
-summary: Switched common connector.
-description: Allows up to four rails to be connected or disconnected from common.
-  Useful for rudimentary relay control & simple GPIO.
+summary: Variable voltage module connector
+description:
+  This connector sports about 12 volts by default. This voltage
+  may dip as low as 10 volts or as high as 15. This is to help support
+  the vast array of 12VDC vehicle & RC accessories without introducing
+  any extra complexity.
+  If a device requires more than 12 volts, it can request it via the
+  `one-wire-data` contact. It is merely a request, though. If there is a
+  module regulating power on pins 4 & 5, it may adjust its output voltage
+  if equipped to do so.
+  To remain safe, modules should not provide more than 50VDC.
+  Any voltages higher than 50VDC should be treated just like mains voltage.
+  See some of the references below for more details.
 reference:
+  - USA NFPA 70 National electrical code
+  - E.U. IEC 60038 Standard voltages
+  - Australia / NZ 3000 Wiring rules
   - https://en.wikipedia.org/wiki/DIN_connector
   - https://en.wikipedia.org/wiki/File:DIN-5c_Diagram.svg
 keywords:
@@ -14,8 +27,12 @@ aliases:
 compatible:
   - din6-240
 contacts:
-  1: common-switched-1
-  2: common-switched-2
-  3: common-switched-3
-  4: common-switched-4
-  5: common
+  1: one-wire-data
+  2: common
+  3: common
+  4:
+    - twelve-volts-nominal
+    - negotiated-voltage
+  5:
+    - twelve-volts-nominal
+    - negotiated-voltage
