--- a/connectors/module/dsub-da-15/dsub-da-15.yaml
+++ b/connectors/module/dsub-da-15/dsub-da-15.yaml
@@ -1,9 +1,5 @@
 name: DA-15 Connector
-description: >
-  DA-15 connectors were commonly used by consumers to connect
-  joysticks and other peripherals to traditional computers.
-  Since these are rarely found in modern computing, the connectors
-  are prime candidates for re-specification.
+summary: Enhanced Battery Connector
 aliases:
   - DB-15
   - D-sub 15
@@ -11,17 +7,17 @@ reference:
   - http://pinouts.ru/Inputs/GameportPCMidi_pinout.shtml
 contacts:
   1: one-wire-data
-  2: adc-2
-  3: adc-3
-  4: wave
-  5: pwm
-  6: pixel-data
-  7: i2c-clock
-  8: i2c-data
-  9: digital-reference
+  2: id
+  3: series-sum
+  4: common
+  5: series-balance-ref-0
+  6: series-balance-ref-2
+  7: series-balance-ref-4
+  8: series-balance-ref-6
+  9: regulated-five-volts
   10: common
-  11: thirty-volts-max
+  11: series-sum
   12: common
-  13: digital-audio-spdif
-  14: controller-area-network-low
-  15: controller-area-network-high
+  13: series-balance-ref-1
+  14: series-balance-ref-3
+  15: series-balance-ref-5
