--- a/connectors/module/dsub-dc-8w8/dsub-dc-8w8.yaml
+++ b/connectors/module/dsub-dc-8w8/dsub-dc-8w8.yaml
@@ -1,5 +1,5 @@
 name: DC-8W8 Connector
-summary: 30V Max 160A Max High-Current Power Connector
+summary: 40V Max 160A Max High-Current Power Connector
 notes:
   - Connector may accomodate either 20A or 40A on all contacts.
   - Can be used as a distribution block connector.
@@ -8,7 +8,7 @@ contacts:
   a2: common
   a3: common
   a4: common
-  a5: thirty-volts-max
-  a6: thirty-volts-max
-  a7: thirty-volts-max
-  a8: thirty-volts-max
+  a5: forty-volts-max
+  a6: forty-volts-max
+  a7: forty-volts-max
+  a8: forty-volts-max
