--- a/connectors/module/dsub-dd-50/dsub-dd-50.yaml
+++ b/connectors/module/dsub-dd-50/dsub-dd-50.yaml
@@ -10,72 +10,73 @@ description:
   microcontroller into a Retro Module allows for much easier upgrades.
   Program the microcontroller, walk over to the car & plug it in.
 notes:
-  - The `mode-reference` contact should be connected to the vehicle battery.
+  - The `v-reference` contact should be connected to the vehicle battery.
     Internally, this reference voltage would be used to perform logic level
-    conversion on any of the mode contacts. This allows for compatibility with
+    conversion on any of the `v-*` contacts. This allows for compatibility with
     variations in vehicles not using a `twelve-volts-nominal` operating voltage,
     and provides accomodation for fluctuations in general operating voltages.
-  - Contacts like `mode-left-turn-lights` are ideal for sending activity into
+  - Contacts like `v-left-turn-lights` are ideal for sending activity into
     a microcontroller via a voltage level conversion circuit.
   - If the capabilities of this connector are insufficient, consider pairing
     it with a `dsub-db-25` connector.
+  - The `common-switched*` contacts can be used with microcontrollers, relay
+    coils, switches and/or similar functionality.
 reference:
   - http://electronics.stackexchange.com/a/85007
   - https://hackaday.io/project/3668-christmas-truck
   - https://learn.sparkfun.com/tutorials/spectrum-shield-hookup-guide
   - http://www.instructables.com/id/Hack-your-vehicle-CAN-BUS-with-Arduino-and-Seeed-C
 contacts:
-  1: mode-horn
-  2: mode-headlights-bright
-  3: mode-headlights
-  4: mode-running-lights
-  5: mode-brake-lights
-  6: mode-reverse-lights
-  7: mode-left-turn-lights
-  8: mode-right-turn-lights
-  9: mode-stereo
-  10: mode-ignition-key
-  11: mode-ignition-accessory
-  12: mode-ignition-engine
-  13: mode-dash-backlight
-  14: mode-dome-light
-  15: - mode-trunk-light
-      - mode-truck-bed-light
-  16: - mode-flood-lights
-  17: - mode-accent-lights
+  1: v-horn
+  2: v-headlights-bright
+  3: v-headlights
+  4: v-running-lights
+  5: v-brake-lights
+  6: v-reverse-lights
+  7: v-left-turn-lights
+  8: v-right-turn-lights
+  9: v-stereo
+  10: v-ignition-key
+  11: v-ignition-accessory
+  12: v-ignition-engine
+  13: v-dash-backlight
+  14: v-dome-light
+  15: - v-trunk-light
+      - v-truck-bed-light
+  16: - v-flood-lights
+  17: - v-accent-lights
 
-  18: mode-reserved
-  19: mode-reserved
-  20: mode-reserved
-  21: mode-reserved
-  22: mode-reserved
-  23: mode-reserved
-  24: mode-reserved
-  25: mode-reference
+  18: reserved
+  19: reserved
+  20: reserved
+  21: reserved
+  22: reserved
+  23: reserved
+  24: reserved
+  25: reserved
   26: reserved
   27: reserved
-  28: common
-  29: common
-  30: common-switched
-  31: common-switched-1
-  32: common-switched-2
-  33: common-switched-3
+  28: reserved
+  29: reserved
+  30: reserved
+  31: reserved
+  32: reserved
+  33: reserved
 
-  34: controller-area-network-low
-  35: controller-area-network-high
-  36: common
+  34: v-reference
+  35: v-reference
+  36: v-reference
   37: common
-  38: regulated-five-volts
-  39: regulated-five-volts
-  40: pixel-data
-  41: pixel-data-1
-  42: regulated-five-volts
-  43: regulated-five-volts
-  44: common
-  45: av-bus-audio-mic
-  46: av-bus-audio-mic-balanced-positive
-  47: av-bus-audio-mic-balanced-negative
-  48: - av-bus-audio-special-effects
-      - av-bus-audio-special-effects-balanced-positive
-  49: av-bus-audio-special-effects-balanced-negative
-  50: av-bus-common
+  38: common
+  39: common
+  40: common-switched
+  41: common-switched-1
+  42: common-switched-2
+  43: common-switched-3
+  44: common-switched-4
+  45: common-switched-5
+  46: common-switched-6
+  47: common-switched-7
+  48: one-wire-data
+  49: controller-area-network-low
+  50: controller-area-network-high
