--- a/connectors/module/dsub-de-9/dsub-de-9.yaml
+++ b/connectors/module/dsub-de-9/dsub-de-9.yaml
@@ -12,7 +12,7 @@ aliases:
 contacts:
   1:
     - pixel-data
-    - pulse-width-modulation
+    - pwm
   2: controller-area-network-low
   3: controller-area-network-high
   4: common-host-reset
