--- a/connectors/module-internal/header-16/header-16.yaml
+++ b/connectors/module-internal/header-16/header-16.yaml
@@ -7,17 +7,16 @@ buy:
 contacts:
   1: one-wire-data
   2: id
-  3: balance-ref-0
-  4: balance-ref-2
-  5: balance-ref-4
-  6: balance-ref-6
-  7: balance-ref-8
-  8: balance-ref-10
+  3: series-sum
+  4: common
+  5: series-balance-ref-0
+  6: series-balance-ref-2
+  7: series-balance-ref-4
+  8: series-balance-ref-6
   9: regulated-five-volts
   10: common
-  11: balance-ref-1
-  12: balance-ref-3
-  13: balance-ref-5
-  14: balance-ref-7
-  15: balance-ref-9
-  16: key
+  11: series-sum
+  12: common
+  13: series-balance-ref-1
+  14: series-balance-ref-3
+  15: series-balance-ref-5
