--- a/connectors/module-tiny/card-edge-10/card-edge-10.yaml
+++ b/connectors/module-tiny/card-edge-10/card-edge-10.yaml
@@ -14,11 +14,13 @@ keywords:
   - d-sub 9
   - de-9
 contacts:
-  1: forty-volts-max
+  1:
+    - pixel-data
+    - pwm
   2: controller-area-network-low
   3: controller-area-network-high
-  4: common
-  5: pixel-data
+  4: common-host-reset
+  5: fifteen-volts-max
   6: digital-reference
   7: i2c-clock
   8: i2c-data
