--- a/modules/client/adapters/adapter-usb-battery-pack/adapter-usb-battery-pack.yaml
+++ b/modules/client/adapters/adapter-usb-battery-pack/adapter-usb-battery-pack.yaml
@@ -4,10 +4,9 @@ description: >
   Traditional USB ports provide five volts regulated power. Pocket USB battery
   packs usually feature a LiPo battery, a 5V voltage regulator & charge
   controller. They typically are charged via a micro-USB port.
-  Most of the connectors in The Retro Specification include a
-  `fifteen-volts-max` contact. Since Retro Modules are daisy-chainable,
-  that regulated power is passed from one module to another.
-connectors:
-  - dsub-db-25
-  - usb-a
-  - usb-micro
+  Most of the connectors in The Retro Specification include both a
+  `forty-volts-max` and a `fifteen-volts-max` contact. Since Retro Modules are
+  frequently daisy-chainable, power can be passed from one module to another.
+  To use a USB Battery Pack as a power source, just wire it up to the
+  `forty-volts-max` and/or the `fifteen-volts-max` contact(s). Just make sure
+  it is the _only_ power source when you connect modules together.
