--- a/connectors/module/dsub-de-2w2/dsub-de-2w2.yaml
+++ b/connectors/module/dsub-de-2w2/dsub-de-2w2.yaml
@@ -1,5 +1,5 @@
 name: DE-2W2 Connector
-summary: <40V 40A Max Connector
+summary: 40V 40A Max Connector
 notes:
   - Connector may accomodate either 20A or 40A on A1 & A2.
 contacts:
