--- a/modules/client/adapters/adapter-power-brick/adapter-power-brick.yaml
+++ b/modules/client/adapters/adapter-power-brick/adapter-power-brick.yaml
@@ -10,7 +10,7 @@ description: >
   `forty-volts-max` bus. If a particular module is power-hungry, it should
   prefer power from the `forty-volts-max` bus... and could fall back to the
   `fifteen-volts-max` bus if necessary (e.g. low-power mode).
-  Many inexpensive voltage regulators can tolerate up to about twenty volts.
+  Many inexpensive voltage regulators can tolerate up to about forty volts.
   The power needs of one module may differ from that of another. A five volt
   regulator may be your regulator of choice, but certain modules may need
   twelve volts or more. The `forty-volts-max` bus provides some flexibility.
