--- a/modules/client/adapters/adapter-usb-battery-pack/adapter-usb-battery-pack.yaml
+++ b/modules/client/adapters/adapter-usb-battery-pack/adapter-usb-battery-pack.yaml
@@ -7,6 +7,6 @@ description: >
   Most of the connectors in The Retro Specification include both a
   `forty-volts-max` and a `fifteen-volts-max` contact. Since Retro Modules are
   frequently daisy-chainable, power can be passed from one module to another.
-  To use a USB Battery Pack as a power source, just wire it up to the
+  To use a USB Battery Pack as a power source, wire it up to the
   `forty-volts-max` and/or the `fifteen-volts-max` contact(s). Just make sure
   it is the _only_ power source when you connect modules together.
