--- a/modules/adapters/adapter-usb-battery-pack/adapter-usb-battery-pack.yaml
+++ b/modules/adapters/adapter-usb-battery-pack/adapter-usb-battery-pack.yaml
@@ -5,8 +5,8 @@ description: >
   packs usually feature a LiPo battery, a 5V voltage regulator & charge
   controller. They typically are charged via a micro-USB port.
   Most of the connectors in The Retro Specification include both a
-  `forty-volts-max` and a `twelve-volts-max` contact. Since Retro Modules are
+  `forty-volts-max` and a `fifteen-volts-max` contact. Since Retro Modules are
   frequently daisy-chainable, power can be passed from one module to another.
   To use a USB Battery Pack as a power source, wire it up to the
-  `forty-volts-max` and/or the `twelve-volts-max` contact(s). Just make sure
+  `forty-volts-max` and/or the `fifteen-volts-max` contact(s). Just make sure
   it is the _only_ power source when you connect modules together.
