--- a/modules/adapters/adapter-power-brick/adapter-power-brick.yaml
+++ b/modules/adapters/adapter-power-brick/adapter-power-brick.yaml
@@ -6,10 +6,10 @@ description: >
   into your collection of modules. Most connectors in The Retro Specification
   have one or more `forty-volts-max` contacts. Power can be passed through
   one module to another with ease. If a module requires power, it can use
-  either power from the `twelve-volts-max` bus or power from the
+  either power from the `fifteen-volts-max` bus or power from the
   `forty-volts-max` bus. If a particular module is power-hungry, it should
   prefer power from the `forty-volts-max` bus... and could fall back to the
-  `twelve-volts-max` bus if necessary (e.g. low-power mode).
+  `fifteen-volts-max` bus if necessary (e.g. low-power mode).
   Many inexpensive voltage regulators can tolerate up to about forty volts.
   The power needs of one module may differ from that of another. A five volt
   regulator may be your regulator of choice, but certain modules may need
