--- a/modules/client/adapters/adapter-usb-battery-pack/adapter-usb-battery-pack.yaml
+++ b/modules/client/adapters/adapter-usb-battery-pack/adapter-usb-battery-pack.yaml
@@ -5,9 +5,9 @@ description: >
   packs usually feature a LiPo battery, a 5V voltage regulator & charge
   controller. They typically are charged via a micro-USB port.
   Most of the connectors in The Retro Specification include a
-  `twelve-volts-max` contact. Since Retro Modules are daisy-chainable,
+  `fifteen-volts-max` contact. Since Retro Modules are daisy-chainable,
   that power is passed from one module to another. If a particular
-  module requires power, it can tap into the `twelve-volts-max` bus.
+  module requires power, it can tap into the `fifteen-volts-max` bus.
 connectors:
   - dsub-db-25
   - usb-a
