Adding dedicated common bus for digital signals. Revising main connectors to support 6 & 40 volts max contacts. Adding support for balanced audio on main 25 contact connectors.

--- a/connectors/aviation-gx16-4/aviation-gx16-4.yaml
+++ b/connectors/aviation-gx16-4/aviation-gx16-4.yaml
@@ -15,5 +15,5 @@ keywords:
 contacts:
   1: common
   2: twelve-volts-nominal-switched
-  3: pixel-data
-  4: one-wire-data
+  3: io-pixel-data
+  4: io-one-wire-data
