--- a/connectors/header-2x8/header-2x8.yaml
+++ b/connectors/header-2x8/header-2x8.yaml
@@ -5,8 +5,8 @@ references:
 buy:
   - http://www.networkcables.com/proddetail.php?prod=CO19MS
 contacts:
-  1: one-wire-data
-  2: id
+  1: io-one-wire-data
+  2: io-id
   3: series-sum
   4: common
   5: series-balance-ref-0
