--- a/connectors/audio-phone-mini-trrs/audio-phone-mini-trrs.yaml
+++ b/connectors/audio-phone-mini-trrs/audio-phone-mini-trrs.yaml
@@ -6,8 +6,8 @@ description: >
   It is less-commonly used to route a pair of analog audio signals and a
   composite video signal from an AV device.
   Many older mobile devices featured `common` on the `sleeve` and
-  `av-bus-audio-electret-mic` on `ring_1`. This spec was rejected in favor of
-  `common` on `ring_1`. This allowed new headsets to be better compatible
+  `av-bus-audio-electret-mic` on `ring_2`. This spec was rejected in favor of
+  `common` on `ring_2`. This allowed new headsets to be better compatible
   with both `trs` & `trrs` receptacles.
 reference:
   - https://en.wikipedia.org/wiki/Phone_connector_%28audio%29
@@ -20,12 +20,17 @@ note: The most common spec for each contact is listed first.
 contacts:
   tip:
     - av-bus-audio-left
+    - av-bus-video-component-y
+    - av-bus-video-chrominance
   ring:
     - av-bus-audio-right
+    - av-bus-video-component-pb
     - av-bus-video-composite
-  ring_1:
+  ring_2:
     - av-bus-common
     - av-bus-audio-electret-mic
+    - av-bus-video-component-pr
+    - av-bus-video-luminance
   sleeve:
     - av-bus-audio-electret-mic
     - av-bus-video-composite
