--- a/connectors/aviation-gx16-5/aviation-gx16-5.yaml
+++ b/connectors/aviation-gx16-5/aviation-gx16-5.yaml
@@ -15,6 +15,6 @@ keywords:
 contacts:
   1: common
   2: twelve-volts-nominal-switched
-  3: pixel-data
-  4: one-wire-data
+  3: io-pixel-data
+  4: io-one-wire-data
   5: twelve-volts-nominal
