--- a/connectors/card-edge-26/card-edge-26.yaml
+++ b/connectors/card-edge-26/card-edge-26.yaml
@@ -15,14 +15,14 @@ keywords:
   - d-sub 25
   - db-25
 contacts:
-  1: spi-clock
-  2: controller-area-network-high
-  3: controller-area-network-low
-  4: i2c-clock
-  5: i2c-data
-  6: common-power-request
-  7: fifteen-volts-max
-  8: one-wire-data
+  1: io-spi-clock
+  2: io-controller-area-network-high
+  3: io-controller-area-network-low
+  4: io-i2c-clock
+  5: io-i2c-data
+  6: six-volts-max
+  7: forty-volts-max
+  8: io-one-wire-data
   9: forty-volts-max
   10: forty-volts-max
   11: av-bus-common
@@ -34,9 +34,9 @@ contacts:
     - av-bus-audio-line-level-right
     - av-bus-audio-line-level-aux-send-2
     - av-bus-audio-line-level-channel-2
-  14: spi-controller-out-peripheral-in
-  15: spi-controller-in-peripheral-out
-  16: spi-chip-select
+  14: io-spi-controller-out-peripheral-in
+  15: io-spi-controller-in-peripheral-out
+  16: io-spi-chip-select
   17:
     - av-bus-video-composite
     - av-bus-video-component-pb
@@ -49,7 +49,7 @@ contacts:
     - av-bus-video-separate-chrominance
     - av-bus-video-component-y
     - common
-  20: common-reset
+  20: io-common
   21: common
   22: common
   23: common
@@ -57,9 +57,11 @@ contacts:
     - av-bus-audio-line-level-aux-left
     - av-bus-audio-line-level-aux-return-1
     - av-bus-audio-line-level-channel-3
+    - av-bus-audio-line-level-channel-1-phase-inverted
     - common
   25:
     - av-bus-audio-line-level-aux-right
     - av-bus-audio-line-level-aux-return-2
     - av-bus-audio-line-level-channel-4
+    - av-bus-audio-line-level-channel-2-phase-inverted
     - common
