--- a/connectors/dsub-db-17w2/dsub-db-17w2.yaml
+++ b/connectors/dsub-db-17w2/dsub-db-17w2.yaml
@@ -31,10 +31,10 @@ contacts:
   8: av-bus-audio-channel-4-balanced-negative
   9: av-bus-common
   10: common
-  11: one-wire-data
-  12: spdif
-  13: digital-audio-aes-negative
-  14: digital-audio-aes-positive
+  11: io-one-wire-data
+  12: io-spdif
+  13: io-digital-audio-aes-negative
+  14: io-digital-audio-aes-positive
   15: twelve-volts-nominal-amplifier-request
   a1: common
   a2: twelve-volts-nominal
