--- a/connectors/dsub-db-25/dsub-db-25.yaml
+++ b/connectors/dsub-db-25/dsub-db-25.yaml
@@ -31,7 +31,7 @@ notes:
           contact.
       - The power supply positive is connected to the SPST 'Normally-Open'
         contact.
-      - The SPST relay is energized if `common-power-request` is connected to
+      - The SPST relay is energized if `io-common-power-request` is connected to
         `common`. This connects the power supply positive to the
         `forty-volts-max` contact.
     complex:
@@ -39,18 +39,18 @@ notes:
         supply and the `forty-volts-max` contact.
       - This microcontroller may be part of a typical ATX PC power supply.
       - Microcontrollers within different power supplies may coordinate.
-        If `common-power-request` is connected to `common`, the power supply
+        If `io-common-power-request` is connected to `common`, the power supply
         microcontrollers can automatically nominate one supply as the official
         power source, while all others go into standby mode.
 contacts:
-  1: spi-clock
-  2: controller-area-network-high
-  3: controller-area-network-low
-  4: i2c-clock
-  5: i2c-data
-  6: common-power-request
-  7: fifteen-volts-max
-  8: one-wire-data
+  1: io-spi-clock
+  2: io-controller-area-network-high
+  3: io-controller-area-network-low
+  4: io-i2c-clock
+  5: io-i2c-data
+  6: six-volts-max
+  7: forty-volts-max
+  8: io-one-wire-data
   9: forty-volts-max
   10: forty-volts-max
   11: av-bus-common
@@ -62,9 +62,9 @@ contacts:
     - av-bus-audio-line-level-right
     - av-bus-audio-line-level-aux-send-2
     - av-bus-audio-line-level-channel-2
-  14: spi-controller-out-peripheral-in
-  15: spi-controller-in-peripheral-out
-  16: spi-chip-select
+  14: io-spi-controller-out-peripheral-in
+  15: io-spi-controller-in-peripheral-out
+  16: io-spi-chip-select
   17:
     - av-bus-video-composite
     - av-bus-video-component-pb
@@ -77,7 +77,7 @@ contacts:
     - av-bus-video-separate-chrominance
     - av-bus-video-component-y
     - common
-  20: common-reset
+  20: io-common
   21: common
   22: common
   23: common
@@ -85,9 +85,11 @@ contacts:
     - av-bus-audio-line-level-aux-left
     - av-bus-audio-line-level-aux-return-1
     - av-bus-audio-line-level-channel-3
+    - av-bus-audio-line-level-channel-1-phase-inverted
     - common
   25:
     - av-bus-audio-line-level-aux-right
     - av-bus-audio-line-level-aux-return-2
     - av-bus-audio-line-level-channel-4
+    - av-bus-audio-line-level-channel-2-phase-inverted
     - common
