--- a/connectors/dsub-dc-27w2/dsub-dc-27w2.yaml
+++ b/connectors/dsub-dc-27w2/dsub-dc-27w2.yaml
@@ -8,15 +8,15 @@ notes:
   - Consider used `18650` batteries for your battery pack.
   - Consider the `25R` series of `18650` batteries for better performance.
   - Battery packs may include temperature sensor(s) & that data could be
-    requested via `one-wire-data` or CAN.
+    requested via `io-one-wire-data` or CAN.
   - Battery packs may include a voltage monitoring chip & data could be
-    requested via `one-wire-data` or CAN.
-  - Information about the battery pack could be requested via `one-wire-data`
+    requested via `io-one-wire-data` or CAN.
+  - Information about the battery pack could be requested via `io-one-wire-data`
     for automatic charge controller configuration.
 contacts:
-  1: 1-wire
-  2: controller-area-network-low
-  3: controller-area-network-high
+  1: io-one-wire-data
+  2: io-controller-area-network-low
+  3: io-controller-area-network-high
   4: reserved
   5: reserved
   6: reserved
