--- a/modules/arduino-uno/arduino-uno.yaml
+++ b/modules/arduino-uno/arduino-uno.yaml
@@ -8,8 +8,9 @@ contacts:
   0: uart-receive
   1: uart-transmit
   2: interrupt
-  3: - interrupt-1
-     - pwm
+  3:
+    - interrupt-1
+    - pwm
   4:
   5: pwm-1
   6: pwm-2
@@ -24,7 +25,9 @@ contacts:
   15: adc-1
   16: adc-2
   17: adc-3
-  18: - adc-4
-      - i2c-data
-  19: - adc-5
-      - i2c-clock
+  18:
+    - adc-4
+    - io-i2c-data
+  19:
+    - adc-5
+    - io-i2c-clock
