--- a/modules/client/raspberry-pi/raspberry-pi.yaml
+++ b/modules/client/raspberry-pi/raspberry-pi.yaml
@@ -7,9 +7,9 @@ voltage-max-input: 5
 pi3_contacts:
   1: three-point-three-volts-regulated
   2: regulated-five-volts
-  3: i2c-data
+  3: io-i2c-data
   4: regulated-five-volts
-  5: i2c-clock
+  5: io-i2c-clock
   6:
   7:
   8: uart-transmit
@@ -27,7 +27,7 @@ pi3_contacts:
   20:
   21: spi-master-in-slave-out
   22:
-  23: spi-clock
+  23: io-spi-clock
   24: spi-slave-select
   25:
   26:
