Updating specs for din5-270 & din8 so contact 8 is twelve-volts-nominal by default.

--- a/connectors/din8/specs.yaml
+++ b/connectors/din8/specs.yaml
@@ -15,5 +15,5 @@ contacts:
   6: io-controller-area-network-low
   7: io-controller-area-network-high
   8:
-    - forty-volts-max
+    - twelve-volts-nominal
     - negotiated-voltage
