--- a/connectors/din5-270/specs.yaml
+++ b/connectors/din5-270/specs.yaml
@@ -14,4 +14,6 @@ contacts:
   5: common
   6: io-controller-area-network-low
   7: io-controller-area-network-high
-  8: forty-volts-max
+  8:
+    - twelve-volts-nominal
+    - negotiated-voltage
